--- a/src/app/layout/footer/footer.component.css
+++ b/src/app/layout/footer/footer.component.css
@@ -6,6 +6,12 @@
   bottom: 0;
   width: 100%;
   height: 40px;
-  color: black;
-  margin: 20px 0;
+  padding: 0 50px;
+  margin-bottom: 20px;
+}
+
+.footer p {
+  text-align: center;
+  font-size: 16px;
+  color: var(--text-color);
 }
