fix(translate): udpate use of translate

--- a/src/app/pages/about-me/about-me.component.html
+++ b/src/app/pages/about-me/about-me.component.html
@@ -1,17 +1,12 @@
 <div class="hero-section">
   <div class="text">
     <h2>
-      Hola, Soy Jesus Manuel
+      {{ "about-me.name" | translate }}
       <br />
-      Liendo Palafox 👋
+      {{ "about-me.last-name" | translate }} 👋
     </h2>
     <p>
-      Soy un desarollador web con experiencia en el desarrollo de aplicaciones
-      web y móviles(Responsive). Mi enfoque principal es la creación de
-      soluciones intuitivas y funcionales que satisfacen las necesidades de los
-      usuarios. Tengo mas de 6 años de experiencia en el desarrollo de
-      aplicaciones web utilizando tecnologías como HTML, CSS, JavaScript,
-      TypeScript, Angular entre otras.
+      {{ "about-me.description" | translate }}
     </p>
 
     <!-- <div class="links">
