--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -1,3 +1,3 @@
 <div class="footer">
-  <p>© Copyright 2025 DevLiendo | All Rights Reserved</p>
+  <p>{{ "copyright.text" | translate }}</p>
 </div>
