fix: udpated colors and links references

--- a/src/app/pages/about-me/about-me.component.html
+++ b/src/app/pages/about-me/about-me.component.html
@@ -9,10 +9,14 @@
       {{ "about-me.description" | translate }}
     </p>
 
-    <!-- <div class="links">
-      <a href="#skills">
-        <i class="fa-solid fa-code"></i>
-        <span>Mi CV</span>
+    <div class="links">
+      <a
+        href="https://drive.google.com/file/d/1H1zckdQW0UXmYLb94MkgTMf2745e8sZR/view?usp=drive_link"
+        target="_blank"
+        rel="noopener noreferrer"
+      >
+        <i class="fa-solid fa-file-arrow-down"></i>
+        <span>{{ "about-me.text-cv" | translate }}</span>
       </a>
 
       <a
@@ -23,7 +27,12 @@
         <i class="fa-brands fa-linkedin"></i>
         <span>LinkedIn</span>
       </a>
-    </div> -->
+
+      <a href="mailto:jesusliendo55@gmail.com">
+        <i class="fa-solid fa-envelope"></i>
+        <span>{{ "about-me.text-email" | translate }}</span>
+      </a>
+    </div>
   </div>
 
   <div class="headshot">
