--- a/src/app/pages/about-me/about-me.component.css
+++ b/src/app/pages/about-me/about-me.component.css
@@ -23,16 +23,24 @@
 .hero-section .text .links a {
   display: inline-block;
   padding: 5px 10px;
-  border: 2px solid var(--link-color);
+  border: 2px solid var(--btn-color);
+  background-color: var(--btn-color);
+  color: var(--btn-color-text);
   border-radius: 5px;
   margin-right: 10px;
   margin-bottom: 10px;
   transition: 0.1s;
+  text-decoration: none;
+}
+
+.hero-section .text .links a i {
+  margin-right: 8px;
 }
 
 .hero-section .text .links a:hover {
-  color: var(--text-color);
-  border: 2px solid var(--text-color);
+  color: var(--btn-color-text);
+  border: 2px solid var(--btn-color);
+  text-decoration: underline;
 }
 
 .hero-section .headshot {
