fix: updated code and remove styles

--- a/src/app/layout/nav-bar/nav-bar.component.css
+++ b/src/app/layout/nav-bar/nav-bar.component.css
@@ -16,7 +16,7 @@ nav {
 nav .left {
   display: flex;
   align-items: center;
-  gap: 20px;
+  gap: 10px;
 }
 
 nav .left a {
@@ -25,18 +25,24 @@ nav .left a {
   font-weight: 600;
 }
 
-nav .left button {
+nav .left .fi {
+  border-radius: 10px;
+  font-size: 22px;
+}
+
+nav .right button {
   background-color: var(--background-color);
   color: var(--text-color);
   border: none;
   font-size: 22px;
+  margin: 0 10px;
 }
 
-.left button:hover {
+.right button:hover {
   cursor: pointer;
 }
 
-nav .right a {
+/* nav .right a {
   color: var(--text-color);
   margin: 0 10px;
 }
@@ -50,4 +56,4 @@ nav .right a:last-child {
 
 nav .right a span {
   margin-left: 5px;
-}
+} */
