fix: added module testimony

--- a/src/app/layout/nav-bar/nav-bar.component.html
+++ b/src/app/layout/nav-bar/nav-bar.component.html
@@ -30,6 +30,13 @@
   <section id="experience">
     <app-experience />
   </section>
+
+  <!-- Proyects -->
+
+  <!-- Testimony -->
+  <section id="testimony">
+    <app-testimony />
+  </section>
 </main>
 
 <app-footer />
