--- a/src/app/pages/testimony/testimony.component.css
+++ b/src/app/pages/testimony/testimony.component.css
@@ -1,6 +1,8 @@
 .testimony-section {
   padding: 0 50px;
-  margin-bottom: 100px;
+  text-align: center;
+  max-width: 900px;
+  margin: auto;
 }
 
 .testimony-section h2 {
@@ -8,33 +10,76 @@
   margin-bottom: 30px;
 }
 
-.testimony-section .group {
+.testimony-section .carousel-container {
+  overflow: hidden;
+  width: 100%;
+  margin-bottom: 100px;
+}
+
+.testimony-section .carousel-container .carousel {
   display: flex;
+  gap: 20px;
+  flex-wrap: nowrap;
+  overflow-x: scroll;
+}
+
+.testimony-section .carousel-container .carousel .card {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   align-items: center;
-  gap: 50px;
-}
-
-.testimony-section .group .person-details {
-  text-align: center;
-  flex: 2;
-}
-
-.testimony-section .group .person-details img {
+  flex: 0 0 calc(100% / 2 - 30px);
+  margin: 0 12px;
+  background-color: var(--background-color);
+  color: var(--text-color);
+  border: 2px solid var(--border-color);
+  border-radius: 8px;
   width: 200px;
-  aspect-ratio: 1 / 1;
-  object-fit: cover;
+  padding: 10px 20px;
+  gap: 10px;
+  margin-bottom: 20px;
+}
+
+.person-details img {
+  width: 80px;
+  height: 80px;
   border-radius: 50%;
+  margin-bottom: 10px;
+  object-fit: cover;
+  aspect-ratio: 1/1;
+}
+
+.testimony-section .carousel .card p {
   margin-bottom: 10px;
 }
 
-.testimony-section .group .person-details p {
-  font-weight: 600;
+.testimony-section .carousel .card a {
+  padding: 5px 10px;
+  border: 2px solid var(--btn-color);
+  background-color: var(--btn-color);
+  color: var(--btn-color-text);
+  border-radius: 5px;
+  margin-right: 10px;
+  margin-bottom: 10px;
+  transition: 0.1s;
+  text-decoration: none;
 }
 
-.testimony-section .group .person-details p:last-child {
-  font-weight: normal;
+.testimony-section .carousel .card .text {
+  height: 150px;
+  overflow-y: auto;
 }
 
-.testimony-section .group .text {
-  flex: 8;
+.testimony-section .carousel .card .text::-webkit-scrollbar {
+  width: 5px;
+  background: rgb(204, 204, 204);
+}
+
+.carousel::-webkit-scrollbar {
+  height: 5px;
+}
+
+.carousel::-webkit-scrollbar-thumb {
+  /* border-radius: 10px; */
+  background: rgb(204, 204, 204);
 }
