--- a/src/app/pages/about-me/about-me.component.html
+++ b/src/app/pages/about-me/about-me.component.html
@@ -11,9 +11,8 @@
 
     <div class="links">
       <a
-        href="https://drive.google.com/file/d/1H1zckdQW0UXmYLb94MkgTMf2745e8sZR/view?usp=drive_link"
-        target="_blank"
-        rel="noopener noreferrer"
+        [attr.href]="'about-me.url-cv' | translate"
+        [attr.download]="'about-me.name-download-cv' | translate"
       >
         <i class="fa-solid fa-file-arrow-down"></i>
         <span>{{ "about-me.text-cv" | translate }}</span>
